# lidar_slam_preprocessing

./: README.md  note.md
data/: .gitignore
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/point-cloud-process/lib/point-cloud-process/: plane_cloud
install/point-cloud-process/share/point-cloud-process/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ros2_kitti_publishers/lib/ros2_kitti_publishers/: kitti_publishers
install/ros2_kitti_publishers/share/ros2_kitti_publishers/: local_setup.sh  package.sh
install/rtabmap_costmap_plugins/share/rtabmap_costmap_plugins/: package.bash  package.zsh
install/slam_0_bringup/share/slam_0_bringup/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/slam_1_pc-process/lib/slam_1_pc-process/: 1_import_pcd  2_manual_pcd  3_voxel_grid  4_passthrough  5_segmentation  6_clustering  7_kitti_voxel  main
log/: latest_build  latest_list
note/: note.md
src/slam_0_bringup/: CMakeLists.txt
src/slam_0_bringup/launch/: my_rviz.launch.py  publish_kitti.launch.py
src/slam_0_bringup/rviz/: rviz_kitti.rviz
src/slam_1_pc-process/: CMakeLists.txt
src/slam_1_pc-process/data/: 4_world.pcd  5_world.pcd  6_cluster_1.pcd  6_cluster_2.pcd  6_cluster_3.pcd  6_cluster_4.pcd  6_cluster_5.pcd  6_cluster_6.pcd  6_cluster_7.pcd  6_cluster_8.pcd  6_cluster_9.pcd  6_world_after.pcd  6_world_before.pcd  manual_pcd.pcd
src/slam_1_pc-process/src/: 1_import_pcd.cpp  2_manual_pcd.cpp  3_voxel_grid.cpp  4_passthrough.cpp  5_segmentation.cpp  6_clustering.cpp  main.cpp
(+15 files in other folders)
